--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="white">#FFF</color>
     <color name="grayLight">#EEE</color>
     <color name="gray">#BBB</color>
+    <color name="grayDiffs">#888</color>
     <color name="grayMM">#414141</color>
 
     <color name="red">#FF0000</color>
