--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -86,7 +86,7 @@
     <style name="TextViewTableSeatSmall" parent="AppTheme">
         <item name="android:textColor">@color/grayMM</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:lines">2</item>
+        <item name="android:lines">1</item>
         <item name="android:textSize">16sp</item>
         <item name="android:ellipsize">end</item>
         <item name="android:includeFontPadding">true</item>
@@ -108,7 +108,7 @@
         <item name="android:paddingEnd">@dimen/standard_and_half_margin</item>
         <item name="android:paddingTop">@dimen/half_standard_margin</item>
         <item name="android:paddingBottom">@dimen/half_standard_margin</item>
-        <item name="android:layout_marginTop">@dimen/standard_and_half_margin</item>
+        <item name="android:layout_marginTop">@dimen/half_and_quarter_standard_margin</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -122,7 +122,7 @@
         <item name="android:paddingStart">@dimen/standard_and_half_margin</item>
         <item name="android:paddingEnd">@dimen/standard_and_half_margin</item>
         <item name="android:paddingBottom">@dimen/standard_and_half_margin</item>
-        <item name="android:layout_marginTop">@dimen/standard_and_half_margin</item>
+        <item name="android:layout_marginTop">@dimen/half_standard_margin</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -159,11 +159,25 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">10sp</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/gray</item>
+        <item name="android:textColor">@color/grayDiffs</item>
+    </style>
+
+    <style name="diffsDialogTitleCell" parent="AppTheme">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/quarter_standard_margin</item>
+        <item name="android:lines">1</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/grayMM</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="diffsDialogCell" parent="AppTheme">
         <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_weight">1</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">@dimen/quarter_standard_margin</item>
         <item name="android:lines">1</item>
