--- a/app/src/main/res/layout/combinations_activity.xml
+++ b/app/src/main/res/layout/combinations_activity.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2023  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -48,9 +47,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/gray"
-        android:fadingEdge="vertical"
         android:paddingTop="@dimen/quarter_standard_margin"
         android:paddingBottom="@dimen/quarter_standard_margin"
+        android:fadeScrollbars="false"
+        android:fadingEdgeLength="@dimen/standard_margin"
+        android:requiresFadingEdge="vertical"
+        android:scrollbars="vertical"
+        android:scrollIndicators="end"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
