--- a/app/src/main/res/layout/custom_num_pad.xml
+++ b/app/src/main/res/layout/custom_num_pad.xml
@@ -27,13 +27,13 @@
         android:id="@+id/etCustomNumPadDisplay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/half_standard_margin"
         android:background="@null"
         android:clickable="false"
         android:enabled="false"
         android:focusable="false"
         android:gravity="center"
         android:hint="-"
+        tools:text="8"
         android:importantForAutofill="no"
         android:inputType="none"
         android:lines="1"
@@ -50,7 +50,6 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/half_standard_margin"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
