--- a/app/src/main/res/layout/game_action_dialog_diffs.xml
+++ b/app/src/main/res/layout/game_action_dialog_diffs.xml
@@ -19,26 +19,26 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tlActionDialogDiffs"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TableRow>
 
         <TextView
-            style="@style/diffsDialogCell"
+            style="@style/diffsDialogTitleCell"
             android:text="@string/to_be_by"
             android:textStyle="normal" />
 
         <TextView
-            style="@style/diffsDialogCell"
+            style="@style/diffsDialogTitleCell"
             android:text="@string/self_pick" />
 
         <TextView
-            style="@style/diffsDialogCell"
+            style="@style/diffsDialogTitleCell"
             android:text="@string/direct" />
 
         <TextView
-            style="@style/diffsDialogCell"
+            style="@style/diffsDialogTitleCell"
             android:text="@string/indirect" />
 
     </TableRow>
