--- a/app/src/main/res/layout/game_hu_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_hu_dialog_fragment.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2023  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -25,17 +24,22 @@
     tools:background="@color/blackTransparent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/second_standard_margin"
+        android:layout_margin="@dimen/standard_margin"
         app:cardBackgroundColor="@color/grayLight"
         app:cardCornerRadius="@dimen/half_standard_margin"
         app:cardMaxElevation="8dp"
-        app:contentPadding="@dimen/second_standard_margin">
+        app:contentPadding="@dimen/standard_margin">
 
         <ScrollView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:fadeScrollbars="false"
+            android:fadingEdgeLength="@dimen/standard_margin"
+            android:requiresFadingEdge="vertical"
+            android:scrollbars="vertical"
+            android:scrollIndicators="end">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -64,8 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_below="@+id/iGameHuDialogWinnerContainer"
-                    android:layout_marginTop="@dimen/standard_margin"
-                    android:layout_marginBottom="@dimen/half_and_quarter_standard_margin"
+                    android:layout_marginTop="@dimen/half_standard_margin"
                     android:background="@color/gray" />
 
                 <TextView
@@ -85,17 +88,14 @@
                     android:id="@+id/cdsGameHuDialog"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvGameHuDialogDiscarderText"
-                    android:layout_marginTop="@dimen/half_standard_margin"
-                    android:layout_marginBottom="@dimen/half_standard_margin" />
+                    android:layout_below="@+id/tvGameHuDialogDiscarderText" />
 
                 <View
                     android:id="@+id/vGameHuDialogSeparator2"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_below="@+id/cdsGameHuDialog"
-                    android:layout_marginTop="@dimen/half_and_quarter_standard_margin"
-                    android:layout_marginBottom="@dimen/half_and_quarter_standard_margin"
+                    android:layout_marginTop="@dimen/half_standard_margin"
                     android:background="@color/gray" />
 
                 <TextView
@@ -114,9 +114,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvGameHuDialogPointsText"
                     android:layout_centerHorizontal="true"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/standard_margin"
-                    android:layout_marginBottom="@dimen/standard_margin" />
+                    android:layout_gravity="center" />
 
                 <Button
                     android:id="@+id/btGameHuDialogCancel"
@@ -136,9 +134,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/cnpGameHuDialog"
-                    android:layout_alignEnd="@+id/cdsGameHuDialog"
+                    android:layout_alignParentEnd="true"
                     android:layout_marginTop="@dimen/standard_margin"
-                    android:layout_marginEnd="-26dp"
                     android:background="@android:color/transparent"
                     android:text="@string/save" />
 
