--- a/app/src/main/res/layout/game_penalty_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_penalty_dialog_fragment.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2023  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -25,38 +24,60 @@
     tools:background="@color/blackTransparent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/second_standard_margin"
         app:cardBackgroundColor="@color/grayLight"
         app:cardCornerRadius="@dimen/half_standard_margin"
         app:cardMaxElevation="8dp"
-        app:contentPadding="@dimen/second_standard_margin">
+        app:contentPadding="@dimen/standard_margin">
 
         <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fadeScrollbars="false"
+            android:fadingEdgeLength="@dimen/standard_margin"
+            android:requiresFadingEdge="vertical"
+            android:scrollbars="vertical"
+            android:scrollIndicators="end">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal">
 
                 <include
                     android:id="@+id/iPenaltyDialogPlayerContainer"
                     layout="@layout/table_seat_medium"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true" />
+
+                <View
+                    android:id="@+id/vPenaltyDialogSeparator2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/iPenaltyDialogPlayerContainer"
+                    android:layout_marginTop="@dimen/half_standard_margin"
+                    android:background="@color/gray" />
+
+                <TextView
+                    android:id="@+id/tvPenaltyDialogPointsText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/vPenaltyDialogSeparator2"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/half_standard_margin"
+                    android:text="@string/points_"
+                    android:textColor="@color/grayMM" />
 
                 <com.etologic.mahjongscoring2.app.custom_views.CustomNumPad
                     android:id="@+id/cnpPenaltyDialog"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/iPenaltyDialogPlayerContainer"
-                    android:layout_marginTop="@dimen/standard_margin"
-                    android:layout_marginBottom="@dimen/standard_margin"
+                    android:layout_below="@+id/tvPenaltyDialogPointsText"
+                    android:layout_centerHorizontal="true"
                     android:gravity="center"
                     android:inputType="numberDecimal"
                     android:maxLength="4"
@@ -68,7 +89,6 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/cnpPenaltyDialog"
                     android:layout_alignStart="@+id/cnpPenaltyDialog"
-                    android:layout_marginStart="@dimen/standard_margin"
                     android:layout_marginTop="@dimen/standard_margin"
                     android:checked="true"
                     android:text="@string/divided" />
@@ -79,7 +99,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/cbPenaltyDialog"
-                    android:layout_marginTop="@dimen/standard_margin"
                     android:layout_toStartOf="@+id/btPenaltyDialogSave"
                     android:background="@android:color/transparent"
                     android:text="@string/close"
@@ -91,9 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/cbPenaltyDialog"
-                    android:layout_alignEnd="@+id/cnpPenaltyDialog"
-                    android:layout_marginTop="@dimen/standard_margin"
-                    android:layout_marginEnd="-26dp"
+                    android:layout_alignParentEnd="true"
                     android:background="@android:color/transparent"
                     android:text="@string/save" />
 
