--- a/app/src/main/res/layout/main_oldgame_item.xml
+++ b/app/src/main/res/layout/main_oldgame_item.xml
@@ -37,14 +37,16 @@
             <RelativeLayout
                 android:id="@+id/rlOldGameItemTitleContainer"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/third_standard_margin"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/half_standard_margin"
+                android:paddingBottom="@dimen/half_standard_margin"
                 android:layout_alignParentTop="true"
                 android:background="@color/colorPrimary">
 
                 <TextView
                     android:id="@+id/tvOldGameItemStartDate"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_marginStart="@dimen/standard_margin"
                     android:gravity="center_vertical"
@@ -55,7 +57,7 @@
                 <TextView
                     android:id="@+id/tvOldGameItemDuration"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="@dimen/standard_margin"
                     android:layout_toEndOf="@+id/tvOldGameItemStartDate"
