--- a/app/src/main/res/layout/main_oldgame_item.xml
+++ b/app/src/main/res/layout/main_oldgame_item.xml
@@ -266,8 +266,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/standard_margin"
                         android:gravity="center"
-                        android:orientation="vertical"
-                        tools:visibility="visible">
+                        android:orientation="vertical">
 
                         <TextView
                             android:layout_width="wrap_content"
