--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,6 +73,16 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="TextViewTableGameName" parent="AppTheme">
+        <item name="android:textColor">@color/grayDiffs</item>
+        <item name="android:textStyle">bold|italic</item>
+        <item name="android:gravity">center</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:includeFontPadding">true</item>
+    </style>
+
     <style name="TextViewTableSeat" parent="AppTheme">
         <item name="android:textColor">@color/grayMM</item>
         <item name="android:textStyle">bold</item>
